syntax = "proto3";

option go_package = "api-service/api/proto/messagepb";
package messagepb;

message CreateTask {
    string Header = 1;
    string Body = 2;
}

message Task {
    string Header = 1;
    string Body = 2;
    string ID = 3;
    bool IsDone = 4;
}

message TaskList {
    repeated Task tasks = 1;
}

message TaskID {
    string ID = 1;
}

message Nothing {
  bool dummy = 1;
}

service TaskService {
    rpc Create (CreateTask) returns (Nothing) {}
    rpc List (TaskID) returns (TaskList) {}
    rpc Delete (TaskID) returns (Nothing) {}
    rpc Done (TaskID) returns (Nothing) {}
}

